--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 * {
-    background-color: aqua;
+    background-color: rgb(0, 255, 242);
 }
 
 .title {
-    color: chocolate;
+    color: rgb(210, 30, 30);
     height: 100px;
     width: auto;
     font-size: 40px;
@@ -14,7 +14,7 @@
 
 .image-container {
     width: auto;
-    height: 500px;
+    height: 400px;
     align-self: center;
     align-items: center;
     display: flex;
@@ -22,7 +22,7 @@
 }
 
 .ordered-list {
-    color: brown;
+    color: rgb(165, 42, 159);
     font-size: 20px;
     font-weight: 600;
     width: 100%;
@@ -30,7 +30,7 @@
     justify-content: center;
 }
 .list {
-    color: brown;
+    color: rgb(42, 165, 42);
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
     font-size: 20px;
@@ -41,4 +41,23 @@
 img {
     height: 100%;
     object-fit: contain;
+}
+
+.unordered-list {
+    color: black;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    display: grid;
+    justify-content: center
+}
+
+.paragraph {
+    color: black;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    
 }
