--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .body {
     background-color: rgb(0, 255, 242);
 }
@@ -21,6 +22,7 @@
     font-size: 40px;
     font-weight: bold;
     text-align: center;
+    margin: 3px;
 
 }
 
@@ -31,6 +33,8 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    margin: 5%;
+
 }
 
 .ordered-list {
@@ -46,6 +50,7 @@
  img {
     height: 100%;
     object-fit: contain;
+    
 }
 
 button {
@@ -81,5 +86,6 @@ button {
     margin: auto;
     display: grid;
     justify-content: center;
+    padding: 0%;
     
 }
